--- a/store/blocks/header/list-submenu-desktop.jsonc
+++ b/store/blocks/header/list-submenu-desktop.jsonc
@@ -4,7 +4,8 @@
             "orientation": "vertical"
         },
         "children": [
-            "menu-item#reto-1"
+            "menu-item#reto-1",
+            "menu-item#reto-drawer"
         ]
     },
     "menu-item#reto-1": {
@@ -18,6 +19,21 @@
                 "noFollow": true,
                 "tagTitle": "Reto 1",
                 "text": "Reto 1"
+            }
+        },
+        "blocks": []
+    },
+    "menu-item#reto-drawer": {
+        "props": {
+            "type": "custom",
+            "highlight": false,
+            "blockClass": "itemMenu-desk",
+            "itemProps": {
+                "type": "internal",
+                "href": "/store-drawer",
+                "noFollow": true,
+                "tagTitle": "Reto Store Drawer",
+                "text": "Reto Store Drawer"
             }
         },
         "blocks": []
