Feat: Se finaliza el reto 2 y se ajusta el contenido para desktop y mobile

--- a/store/blocks/footer/footer.jsonc
+++ b/store/blocks/footer/footer.jsonc
@@ -15,8 +15,8 @@
 
     "footer-layout.mobile": {
         "children": [
-            "flex-layout.row#newsletter-form",
-            "flex-layout.row#footer-1-mobile"
+            /* "flex-layout.row#newsletter-form",
+            "flex-layout.row#footer-1-mobile" */
         ]
     },
     "flex-layout.row#footer-1-desktop": {
