--- a/store/blocks/retos/reto-2/store-custom-reto-2.jsonc
+++ b/store/blocks/retos/reto-2/store-custom-reto-2.jsonc
@@ -6,84 +6,100 @@
     },
     "flex-layout.row#container-receta":{
         "children":[
-            "responsive-layout.desktop#recetas"
-            /* "responsive-layout.mobile#recetas" */
+            "flex-layout.col#responsiveContentRecipe"
+        ]
+    },
+    "flex-layout.col#responsiveContentRecipe":{
+        "children":[
+            "responsive-layout.desktop#recetas",
+            "responsive-layout.mobile#recetas"
         ]
     },
     "responsive-layout.desktop#recetas":{
         "children":[
+            "flex-layout.row#containerRecipe"
+        ]
+    },
+    "flex-layout.row#containerRecipe":{
+        "children":[
             "flex-layout.col#imagen-receta",
             "flex-layout.col#informacion-receta"
-        ]
+        ],
+        "props":{
+            "blockClass":"containerRecipe"
+        }
     },
     "flex-layout.col#imagen-receta":{
         "children":[
             "image#column-receta"
-        ]
+        ],
+        "props":{
+            "blockClass":"contentRecipeImage"
+        }
     },
     "image#column-receta":{
         "props":{
-            "src":"https://i.imgur.com/ipQipBB.jpg"
+            "src":"https://i.imgur.com/ipQipBB.jpg",
+            "blockClass":"recipeHero"
         }
     },
     "flex-layout.col#informacion-receta":{
         "children":[
             "rich-text#titulo-receta",
             "rich-text#descripcion-receta",
-            "flex-layout.row#preparacion-top"
-            /* "flex-layout.row#preparacion-bottom" */
-        ]
+            "flex-layout.row#ingredientsTopLevel",
+            "flex-layout.row#ingredientsBottomLevel"
+        ],
+        "props":{
+            "blockClass":"contentRecipeInformationSteps"
+        }
     },
     "rich-text#titulo-receta":{
         "props":{
-            "text":"### Pavo dorado relleno al horno"
+            "text":"### Pavo dorado relleno al horno",
+            "blockClass":"titleRecipe"
         }
     },
     "rich-text#descripcion-receta":{
         "props":{
-            "text":"Delicioso y sencillo de preparar, pavo al horno relleno de verduras con jamón serrano para celebrar la navidad con toda la familia."
+            "text":"Delicioso y sencillo de preparar, pavo al horno relleno de verduras con jamón serrano para celebrar la navidad con toda la familia.",
+            "blockClass":"descriptionRecipe"
         }
     },
-    "flex-layout.row#preparacion-top":{
+    "responsive-layout.mobile#recetas":{
         "children":[
-            "image#logo-paso-1",
-            "rich-text#descripcion-paso-1",
-            "image#logo-paso-2",
-            "rich-text#descripcion-paso-2",
-            "image#logo-paso-3",
-            "rich-text#descripcion-paso-3"
+            "flex-layout.row#containerRecipeMobile"
         ]
     },
-    "image#logo-paso-1":{
+    "flex-layout.row#containerRecipeMobile":{
+        "children":[
+            "flex-layout.col#informacion-receta-mobile"
+        ]
+    },
+    "flex-layout.col#informacion-receta-mobile":{
+        "children":[
+            "image#column-receta",
+            "rich-text#titulo-receta",
+            "rich-text#descripcion-receta",
+            "flex-layout.row#ingredientsTopLevelMobile"
+        ],
         "props":{
-            "src":"https://i.imgur.com/RWj3DiZ.png"
+            "blockClass":"contentRecipeInformationSteps"
         }
     },
-    "rich-text#descripcion-paso-1":{
+    "flex-layout.row#ingredientsTopLevelMobile":{
+        "children":[
+            "flex-layout.col#StepOne",
+            "flex-layout.col#StepTwo",
+            "flex-layout.col#StepThree",
+            "flex-layout.col#StepFour",
+            "flex-layout.col#StepFive",
+            "flex-layout.col#StepSix"
+        ],
         "props":{
-            "text":"60 minutos"
-        }
-    },
-    "image#logo-paso-2":{
-        "props":{
-            "src":"https://i.imgur.com/YU224Ni.png",
-            "maxWidth": 20,
-            "maxHeight": 20
-        }
-    },
-    "rich-text#descripcion-paso-2":{
-        "props":{
-            "text":"8 ingredientes"
-        }
-    },
-    "image#logo-paso-3":{
-        "props":{
-            "src":"https://i.imgur.com/EvjGjXS.png"
-        }
-    },
-    "rich-text#descripcion-paso-3":{
-        "props":{
-            "text":"Nivel: Principiante"
+            "blockClass":[
+                "ContainerSteps"
+            ]
         }
     }
 }
